// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM transfers [ BNC V3 -> MGA -> BNC V3 ] send BNC to mangata and back 1`] = `
{
  "free": "0x000000000000003635c9a01b66de1000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM transfers [ BNC V3 -> MGA -> BNC V3 ] send ZLK to mangata and back 1`] = `
{
  "free": "0x000000000000000044b7ac8468240000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM transfers [ BNC V3 -> MGA -> BNC V3 ] send vKSM to mangata and back 1`] = `
{
  "free": 4999677440000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM transfers [ BNC V3 -> MGA -> BNC V3 ] send vsKSM to mangata and back 1`] = `
{
  "free": 4999677440000,
  "frozen": 0,
  "reserved": 0,
}
`;
